# macro-x

./: .gitignore  CMakeLists.txt
scripts/: sirius.cmake
src/: common.hpp  file_manager.cpp  file_manager.hpp  gui.hpp  keybind.cpp  keybind.hpp  keybind_toggle.cpp  keybind_toggle.hpp  main.cpp
src/extensions/: imgui_hotkey.cpp  imgui_hotkey.hpp
src/file_manager/: file.cpp  file.hpp  folder.cpp  folder.hpp
src/utils/: keycode.hpp
